--- a/css/appointment.css
+++ b/css/appointment.css
@@ -155,25 +155,141 @@ button {
   transform: scale(1.1);
 }
 
-.right-container {
+.right-container{
   flex: 1;
 }
-.right-1 {
-}
-.right-1 img {
-  max-width: 100%;
-  height: 100%;
+.right-1{
+  position: relative;
+  
 }
 .right-2 {
-  display: flex;
-  position: absolute;
-  bottom: 10rem;
-  right: 2rem;
+position: absolute;
+bottom: 9rem;
+left: 45rem;
+z-index: 1;
 }
-.right-2-img-1 {
-  flex: 1;
-}
-.right-2-img-2 {
-  flex: 1;
-}
+.right-2 img{
+  max-width: 70%;
+} 
 /*header ending*/
+
+/*sign-up section*/
+.signup-container{
+ color:  #00000080;
+margin: 1rem;
+padding-bottom: 1rem;
+border-bottom:  #00000080 8px solid;
+}
+.signup-container h1{
+  font-size: 2rem;
+  font-weight: bold;
+}
+input{
+  margin: 10px;
+  border: none;
+  border:  solid 7px   #00000080;
+  border-radius: 9px;
+
+}
+.form-1{
+ 
+}
+.form-1 input{
+   padding: 10px 12rem;
+}
+.form-1 input::placeholder{
+  font-size: 1.1rem;
+  border-radius: 2rem;
+}
+
+
+.form-2 input{
+   padding: 9px 6rem;
+}
+.form-2 input::placeholder{
+  font-size: 1.1rem;
+
+}
+
+.form-3 input{
+   padding: 10px 12rem;
+}
+.form-3 input::placeholder{
+  font-size: 1.1rem;
+  border-radius: 2rem;
+}
+
+.form-4 input{
+   padding: 16px 30rem;
+}
+.form-4 input::placeholder{
+  font-size: 1.1rem;
+  border-radius: 2rem;
+}
+.signup-container button{
+  padding: 10px 30px;
+  border-radius: 9px;
+  border: solid white 2px;
+  background-color: #807593;
+  color: white;
+  font-weight: bold;
+  font-size: 1.3rem;
+margin-left: 30rem;
+}
+/*sign-up section end*/
+
+/* footer */
+.fourth-container {
+  display: flex;
+  gap: 3rem;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+.fourth-1 {
+  flex: 1;
+  display: flex;
+  color: black;
+}
+.fourth-1 img {
+  width: fit-content;
+  height: 40px;
+}
+.fourth-2 {
+  flex: 1;
+}
+.fourth-2 h3 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+.fourth-2 ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.fourth-3 {
+  flex: 1;
+}
+.fourth-3 h3 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+.fourth-3 ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.fourth-4 {
+  flex: 1;
+}
+.fourth-4 h3 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+.fourth-4 ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
