--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ button {
 .navigation-container ul li {
   font-weight: bold;
 }
-.Aboutus-container {
+.Home-container {
   background-color: #c5dcff;
 }
 .nav-button {
